# multi_agent_control_tower

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  design.md  inter-expert-messaging-design.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.macot/specs/: agents-subagent-design.md  claude-squad-display-analysis.md  dag-design.md  dag-requirements.md  dag-tasks.md  expert-discovery-design.md  expert-discovery-tasks.md  expert-panel-display-design.md  expert-panel-display-tasks.md  expert-panel-improvements-design.md  expert-panel-performance-design.md  expert-panel-performance-tasks.md  expert-row-execution-status-design.md  expert-row-execution-status-tasks.md  feature-executor-design.md  feature-executor-tasks.md  git-changes-view-design.md  git-changes-view-tasks.md  task-input-scroll-eof-design.md  task-input-scroll-eof-tasks.md  worktree-message-isolation-design.md  worktree-message-isolation-tasks.md  worktree-return-design.md  worktree-return-tasks.md
assets/: README.md  demo-quickstart.tape
doc/: README.md  cli-reference.md  cli.md  configuration.md  design_expert_role_selection.md  inter-expert-messaging-design.md  worktree-branch-launch-design.md  worktree-branch-launch-plan.md
instructions/: architect.md  backend.md  core.md  debugger.md  frontend.md  general.md  messaging.md  planner.md  tester.md
src/: cli.rs  lib.rs  main.rs  utils.rs
src/queue/: mod.rs  (+2 more)
(+67 files in other folders)
